--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bambino-backend",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "start": "bun run src/index.ts"
   },
   "dependencies": {
     "hono": "^4.4.12"
