--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@hono/swagger-ui": "^0.4.0",
+    "@hono/zod-openapi": "^0.14.8",
     "@prisma/client": "^5.16.2",
-    "hono": "^4.4.12"
+    "hono": "^4.4.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest",
