--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hono/zod-openapi": "^0.14.8",
     "@prisma/client": "^5.16.2",
     "hono": "^4.4.12",
+    "oslo": "^1.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
